# reviews

./: .gitignore  README.md
courses/HPFFP/addition/: Addition.hs  addition.cabal  stack.yaml
courses/HPFFP/addition/.stack-work/install/ca5e0e29/flag-cache/: HUnit-1.6.0.0-JrvWwD5n0JVL2qYKQOHt3C  QuickCheck-2.12.6.1-B9xE4Xg7UWTE7VNg8Il923  addition-0.1.0.0-A6YGyyx0gCEUlvjbLbevK  addition-0.1.0.0-G9end3dkpiSAZgnmb9zNHE  ansi-terminal-0.8.2-7Fzw1d3TFhB7cNXdB2Ynhw  call-stack-0.1.0-Eiz5FM8yQXpI3vyQ1Rt4Jq  clock-0.7.2-Cf9UTsaN2AjEpBnoMpmgkU  colour-2.3.4-C3PVIHDZkyCIpOJGl3M0hE  erf-2.0.0.0-DoVcmknp6yaG2oYcmiezYS  hspec-2.6.0-5FGsEgmXMlKK8GbTG42xmy  hspec-core-2.6.0-JkYAzUpLjL2ErFWFdeOsbD  hspec-discover-2.6.0-Dilom7HbQsHHMjSjyqBlDK  hspec-expectations-0.8.2-7lpBAWb1yuYLnEELJ6wtYs  mintty-0.1.2-1LXikZIamei3MKofPHSY1O  primitive-0.6.4.0-39Pwmm1zkQX6bM7xFUT3Jc  quickcheck-io-0.2.0-CZL3f5R2OsRNVqjnmoNel  random-1.1-9LLJAJa4iQFLJiLXBOBXBV  setenv-0.1.1.3-2Y4WVlxWHvG7s7qMvE3DAE  tf-random-0.5-I39p3qgWMzeLwkvBknVuZq
courses/HPFFP/addition/.stack-work/install/ca5e0e29/pkgdb/: HUnit-1.6.0.0-JrvWwD5n0JVL2qYKQOHt3C.conf  QuickCheck-2.12.6.1-B9xE4Xg7UWTE7VNg8Il923.conf  addition-0.1.0.0-G9end3dkpiSAZgnmb9zNHE.conf  ansi-terminal-0.8.2-7Fzw1d3TFhB7cNXdB2Ynhw.conf  call-stack-0.1.0-Eiz5FM8yQXpI3vyQ1Rt4Jq.conf  clock-0.7.2-Cf9UTsaN2AjEpBnoMpmgkU.conf  colour-2.3.4-C3PVIHDZkyCIpOJGl3M0hE.conf  erf-2.0.0.0-DoVcmknp6yaG2oYcmiezYS.conf  hspec-2.6.0-5FGsEgmXMlKK8GbTG42xmy.conf  package.cache  (+9 more)
courses/HPFFP/hangman/: README.md  hangman.cabal  stack.yaml
courses/HPFFP/hangman/src/: Main.hs
(+4340 files in other folders)
